crates/nexus-macros/tests/macro_compile_fail/aggregate_missing_error.stderr
error: `error` is required
  --> tests/macro_compile_fail/aggregate_missing_error.rs:26:8
   |
26 | struct MissingError;
   |        ^^^^^^^^^^^^
